bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__forked_process_history_line.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: combined
---
• Process forked from named-thread (e9f18a88-8081-4e51-9d4e-8af5cde2d8dd)
