bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__forked_process_history_line_without_name.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: combined
---
• Process forked from 019c2d47-4935-7423-a190-05691f566092
