bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__hook_events_render_snapshot.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: combined
---
• Running SessionStart hook: warming the shell

SessionStart hook (completed)
  warning: Heads up from the hook
  hook context: Remember the startup checklist.
