bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__image_generation_call_history_snapshot.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: combined
---
• Generated Image:
  └ A tiny blue square
  └ Saved to: /tmp
