bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: exec_blob
---
• Ran sleep 1
  └ (no output)
