bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__interrupt_preserves_unified_exec_wait_streak.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: snapshot
---
cells=1
■ Conversation interrupted - tell the model what to do differently.
