bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__interrupted_turn_error_message.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: last
---
■ Conversation interrupted - tell the model what to do differently.
