bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__interrupted_turn_pending_steers_message.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: info
---
• Model interrupted to submit steer instructions.
