bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__local_image_attachment_history_snapshot.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: combined
---
• Viewed Image
  └ example.png
