bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__mcp_startup_header_booting.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"                                                                                "
"› Ask Chaos to do anything                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
